# file_cloud

./: Cargo.toml  file-cloud.toml
app-api/: Cargo.toml
app-api/src/: main.rs  swagger.rs
app-api/src/handlers/: common.rs  mod.rs  upload.rs
app-console/: Cargo.toml
app-console/src/: lib.rs  main.rs  swagger.rs
app-console/src/handlers/: auth.rs  bucket.rs  common.rs  download.rs  file.rs  mod.rs  swagger.rs  upload.rs  user.rs  user_bucket.rs
app-console/src/middleware/: auth_middleware.rs  mod.rs
app-console/src/util/: mod.rs  tools.rs
app-job/: Cargo.toml
app-job/src/: main.rs
app-job/src/job/: mod.rs  thumbnail_job.rs
common/: Cargo.toml
common/src/: errors.rs  lib.rs  resp.rs
common/src/config/: config.rs
common/src/util/: common_dto.rs  common_utils.rs  md5_util.rs  mod.rs  page_dto.rs  uuid_utils.rs  value_pare.rs  zip_util.rs
model/: Cargo.toml
model/src/: lib.rs
model/src/db/: biz_repository.rs  date_format.rs  mod.rs  models.rs  repository.rs
src/: .env  errors.rs  lib.rs  main.rs  resp.rs  swagger.rs  test.rs
src/config/: config.rs
src/db/: models.rs
src/handlers/: common.rs  download.rs  mod.rs  upload.rs
src/job/: mod.rs  thumbnail_job.rs
src/util/: mod.rs  uuid.rs
