[workspace]
members = [
    "app-api",
    "app-console",
    "app-job",
    "model",
    "common"]
resolver = "2"
[workspace.dependencies]
actix-identity={version = "0.8.0"}
actix-session={version = "0.10.1"}

actix-web = "4.9"
dotenvy = "0.15.7"
moka = { version = "0.12.10", features = ["future"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
utoipa = { version = "5.3.1", features = ["actix_extras"] }
log = "0.4.26"
thiserror = "2.0.12"
redis = { version = "0.29.1", features = ["tokio-comp", "connection-manager"] }
config = "0.15.9"
futures-util = "0.3.31"
chrono = { version = "0.4.40",features = ["serde"] }
rand = "0.9.0"
sha2 = "0.10.8"
hex = "0.4.3"
actix-multipart = "0.7.2"
actix-service = "2.0.3"
env_logger = "0.11.7"
uuid = { version = "1.15.1", features = ["v4"] }
derive_more = "2.0.1"
strum = "0.27.1"
strum_macros = "0.27.1"
futures = "0.3.31"
async-stream = "0.3.6"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-rustls","chrono"] }
sanitize-filename = "0.6.0"
image = "0.25.5"
webp = "0.3.0"
md-5 = "0.10.6"
lazy_static = "1.5.0"
validator = { version = "0.20.0",features = ["derive"] }