[package]
name = "app-api"
version = "0.1.0"
edition = "2024"
[profile.dev]
debug = true
[dependencies]
common = { path = "../common" }
model = { path = "../model" }
actix-web = {workspace = true}
dotenvy = {workspace = true}
moka = {workspace = true}
serde = {workspace = true}
serde_json ={workspace = true}
tokio ={workspace = true}
toml = {workspace = true}
log = {workspace = true}
thiserror = {workspace = true}
redis = {workspace = true}
config = {workspace = true}
futures-util ={workspace = true}
chrono = {workspace = true}
rand = {workspace = true}
sha2 = {workspace = true}
hex = {workspace = true}
actix-multipart = {workspace = true}
env_logger = {workspace = true}
uuid ={workspace = true}
derive_more ={workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
futures ={workspace = true}
async-stream ={workspace = true}
sqlx = {workspace = true}
sanitize-filename = {workspace = true}
image = {workspace = true}
webp = {workspace = true}
lazy_static.workspace = true
validator.workspace = true
