[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web={workspace = true}
dotenvy = { workspace = true }
moka =  { workspace = true }
serde =  { workspace = true }
serde_json =  { workspace = true }
tokio =  { workspace = true }
toml =  { workspace = true }
log =  { workspace = true }
thiserror =  { workspace = true }
redis =  { workspace = true }
config =  { workspace = true }
futures-util =  { workspace = true }
chrono = { workspace = true }
rand =  { workspace = true }
sha2 =  { workspace = true }
hex.workspace = true
actix-multipart =  { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true }
derive_more = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
futures =  { workspace = true }
async-stream =  { workspace = true }
sanitize-filename = { workspace = true }
image =  { workspace = true }
webp = { workspace = true }
sqlx = { workspace = true }
md-5.workspace = true
hex-literal = "1.0.0"
validator.workspace = true
snowflake.workspace = true
rustflake.workspace = true
walkdir.workspace = true
zip.workspace = true
anyhow.workspace = true
tempfile.workspace = true
clap.workspace = true
bytes = "1.10.1"
tokio-util = "0.7.14"