[package]
name = "model"
version = "0.1.0"
edition = "2024"

[dependencies]
common={path = "../common"}
serde =  { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
actix-web = {workspace = true}
utoipa-swagger-ui.workspace = true
utoipa={workspace = true,features = ["chrono"]}
sqlx = { workspace = true }
async-trait = "0.1.88"
